fix dark mode

--- a/app/components/Offers/Offers.module.css
+++ b/app/components/Offers/Offers.module.css
@@ -17,6 +17,15 @@
     transition: 0.2s ease-in-out;
 }
 
+@media (prefers-color-scheme: dark) {
+    .card{
+    box-shadow: 0px 0px 20px -4px rgba(255, 255, 255, 0.459);
+
+    }
+}
+
+
+
 .card:hover{
     transform: scale(1.1);
     animation: tambaleo 1s infinite;
